- Implementacoes finais do projeto (imagens, comentarios, ajustes). - Complemento dos teste unitarios. - Complemento dos teste instrumentais.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,15 @@
 <resources>
     <string name="app_name">QRStarWars</string>
-    <string name="action_settings">Settings</string>
-    <string name="no_qr_read">Não há dados</string>
-    <string name="activity_principal_info">Para ler um QR Code clique no botão abaixo.</string>
-    <string name="activity_principal_erro_exists">Personagem \'%1$s\' já lido anteriormente</string>
-    <string name="films_fragment_film_no_related">Filme não relacionado</string>
+    <string name="no_qr_read">No data found</string>
+    <string name="activity_principal_info">To read a QR Code click the button below.</string>
+    <string name="activity_principal_erro_exists">Character \'%1$s\' read before</string>
+    <string name="films_fragment_film_no_related">Unrelated movie</string>
+    <string name="film_4" >http://www.starwars.com/films/star-wars-episode-iv-a-new-hope</string>
+    <string name="film_5" >http://www.starwars.com/films/star-wars-episode-v-the-empire-strikes-back</string>
+    <string name="film_6" >http://www.starwars.com/films/star-wars-episode-vi-return-of-the-jedi</string>
+    <string name="film_1" >http://www.starwars.com/films/star-wars-episode-i-the-phantom-menace</string>
+    <string name="film_2" >http://www.starwars.com/films/star-wars-episode-ii-attack-of-the-clones</string>
+    <string name="film_3" >http://www.starwars.com/films/star-wars-episode-iii-revenge-of-the-sith</string>
+    <string name="film_7" >http://www.starwars.com/films/star-wars-episode-vii-the-force-awakens</string>
+    <string name="film_8" >http://www.starwars.com/films/star-wars-episode-viii-the-last-jedi</string>
 </resources>
